# CSProjects

./: README.md
AED3/1C2023/TP1/: ej1.cpp  ej1_third.cpp  ej2.cpp  ej2_BU.cpp  ej2_BU_corregido.cpp  ej2_BU_opt.cpp  ej2_TD.cpp  ej2_TD_corregido.cpp  modex.cpp  prueba.cpp  supersale.cpp
AED3/1C2023/TP2/: ej3_DSU_exp.cpp  ej3_cuad_exp.cpp  ej3_sort_cuadratico_exp.cpp  generador_instancia_random.py
AED3/2C2022/TP1/: README.txt  ej1.cpp  ej2.cpp  ej3.cpp
AED3/2C2022/TP2/: READ_ME.txt  ej1.cpp  ej2.cpp  ej3.cpp  ej4.cpp
IngenieriaDelSoftware/Ejercicios/: readme.md
IngenieriaDelSoftware/Parciales/: ISW1-2023-2C-Recuperatorio.st
MetodosNumericos/: README.md
MetodosNumericos/TP1/BlastFurnace/: .gitignore  README.md
MetodosNumericos/TP1/BlastFurnace/cpp/: CMakeLists.txt  blast_furnace.cpp  blast_furnace.h  io.cpp  io.h  isoterma.cpp  solver.cpp  solver.h  temperatura.cpp
MetodosNumericos/TP1/BlastFurnace/cpp/tests/: blast_furnace.cc  ge.cc  lu.cc  matrix.cc  vector.cc
MetodosNumericos/TP1/BlastFurnace/cpp/types/: LU.cpp  LU.h  dimension.h  matriz.cpp  matriz.h  vector.cpp  vector.h
MetodosNumericos/TP1/BlastFurnace/python/: requirements.txt
MetodosNumericos/TP2/OCR/: .gitignore  CMakeLists.txt
MetodosNumericos/TP2/OCR/notebooks/: custom_digits.ipynb  (+11 more)
MetodosNumericos/TP3/LOESS/: .gitignore
ParadigmasDeLaProgramacion/: README.md
ParadigmasDeLaProgramacion/Haskell/Ejercicios/: ejercicios_P0.hs  ejercicios_P1.hs
ParadigmasDeLaProgramacion/Haskell/TP/: NavesEspaciales.hs
ParadigmasDeLaProgramacion/JS/TP/: taller.js
ParadigmasDeLaProgramacion/Prolog/TP/: ejercicios_clases_practicas.pl  ejercicios_prolog.pl  tp3.pl
SistemasOperativos/TP1/: README.md
SistemasOperativos/TP1/entregable/: CMakeLists.txt  IO.cpp  IO.h  buscar.cpp  config.cpp  config.h  definiciones.h  equipo.cpp  equipo.h  gameMaster.cpp  gameMaster.h  jugar.cpp
SistemasOperativos/TP1/entregable/config/: config_alto.csv  config_ancho.csv  config_sequential_small.csv
SistemasOperativos/TP1/entregable/output/: alto  ancho  sequential_small
SistemasOperativos/TP1/entregable/python/: test.py
SistemasOperativos/TP1/entregable/python/lib/: generate_board.py  graph.py  render_game.py
SistemasOperativos/TP1/entregable/python/output/: tiempo_alto.time  tiempo_ancho.time  tiempo_time_big.time  tiempo_time_giant.time
SistemasOperativos/TP2/: README.md
TeoriaDeLasComunicaciones/: README.md
TeoriaDeLasComunicaciones/TP1_Wiretapping/: graphs.py  packet_catcher.py
TeoriaDeLasComunicaciones/TP2_Traceroute/: cimbala.py  clean.sh  graphs.py  traceroute.py
TeoriaDeLasComunicaciones/TP2_Traceroute/traceroute_output/: www.concordia.ca.csv  www.tum.de.csv  www.u-tokyo.ac.jp.csv  www.uio.no.csv  www.univ-toliara.mg.csv
TeoriaDeLasComunicaciones/TP2_Traceroute/txtResultados/: ResultadosTTLConcordia.txt  ResultadosTTLTokyo.txt  ResultadosTTLToliara.txt  ResultadosTTLTum.txt  ResultadosTTLUio.txt  prediccionUmbral.py
customLanguage/CLox/: Makefile
customLanguage/CLox/src/: AST.cpp  AST.h  CLox.cpp  CLoxLexer.cpp  main.cpp  visitor.cpp  visitor.h
customLanguage/CLox/testing/: test_CLox.cpp  test_CLoxLexer.cpp
(+718 files in other folders)
